# echodataflow

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  echoflow_init.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-build.yml  docker-release.yml  main.yaml  pypi.yml  pytest.yml  python-publish.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
cava_project/: hello.py
cava_project/tests/: test_hello.py
deployment/: FileMonitor.service  deploy_echodataflow_worker.sh  deploy_echoflow_worker.sh  docker_trigger.py  environment_snapshot.txt  main.py
deployment/Linux/: edf_echoshader.service  edf_echoshader_shimada.service  edf_worker.service
deployment/MacOS/: FileDownloader.plist  echodataflow.plist
deployment_config/: ship_deployment_instructions.md
deployment_config/Linux/: FileDownloader.service  echodataflow.service
deployment_config/MacOS/: FileMonitor.plist
docs/: requirements.txt  setup.md
docs/configuration/: blocks.md  datastore.md  pipeline.md
docs/source/: _config.yml  _toc.yml  conf.py  gettingstarted.md  gettingstarteddocker.md  index.rst
docs/source/aws/: EK60_SH1707_Shimada.txt  datastore.yaml  datastoreconfiguration.md  intro.md  notebook.ipynb  pipeline.yaml  pipelineconfiguration.md  prereq.md  setup.md
docs/source/cli/: credentials.md  genstage.md  intro.md  rules.md
docs/source/configuration/: blocks.md  datastore.md  pipeline.md
docs/source/local/: datastore.yaml  datastoreconfiguration.md  intro.md  notebook.ipynb  pipeline.yaml  pipelineconfiguration.md  setup.md
docs/source/logging/: awscloud.md  daskstream.md  howtolog.md  kelk.md
echodataflow/: __init__.py  docker_trigger.py  echodataflow_cli.py
echodataflow/aspects/: echodataflow_aspect.py  singleton_echodataflow.py
echodataflow/config/: datastore.yaml  logging_config.yaml  pipeline.yaml
echodataflow/deployment/: Redesign.md  demo.ipynb  deployment_demo.yaml  deployment_engine.py  deployment_engine_demo.ipynb  flow.py  service.py
echodataflow/extensions/: echopop_panel.py  file_downloader.py  file_monitor.py  file_monitor_18kHz.py  panel_app.py  panel_app_lasker.py  panel_app_shimada.py
echodataflow/models/: datastore.py  db_log_model.py  deployment.py  echodataflow_config.py  output_model.py  pipeline.py  run.py
echodataflow/rewrite/: 20250615_check_prediction_steps.ipynb  20250616_viz_echogram.ipynb  20250617_prototype_MVBS_cache.ipynb  20250905_ingest_NASC.ipynb  20250906_df_NASC_all_stratify.ipynb  20250906_length_count_hist.ipynb  20250906_length_weight.ipynb  20250906_track_map.ipynb  20250906_track_map_NASC_bubble.ipynb  config.yaml  config_cloud.yaml  config_ship.yaml  config_ship_mass.yaml  core.py  deploy_cli.py  deploy_cloud.py  deploy_cloud.yaml  deploy_ship.py  deploy_ship.yaml  deployment_engine.py  flow_cloud_test.py  flows_acoustics.py  flows_biology.py  flows_integration.py  flows_viz_cloud.py  grid.py  helpers.py  inpfc_def.csv  logging_test.py  prototype.py  run_ship_mass.py  utils.py  viz_echogram_track.py  viz_echogram_track.service
echodataflow/rule_engine/: dependency_engine.py  echodataflow_rules.txt
echodataflow/services/: deploy_prefect_worker.service  deploy_prefect_worker.sh  viz_bio.py  viz_bio.service  viz_core.py  viz_echogram_track.py  viz_echogram_track.service  viz_echogram_track_old.py
echodataflow/stages/: docker_trigger.py  echodataflow.py  echodataflow_trigger.py
echodataflow/tasklib/: echopype.py
echodataflow/tests/: viz_test.ipynb
echodataflow/utils/: config_utils.py  database_utils.py  databse_utils.py  file_utils.py  filesystem_utils.py  flow_utils.py  function_utils.py  log_util.py  prefect_utils.py  rest_utils.py  watchdog_utils.py  xr_utils.py
echoflow/: __init__.py  echoflow_cli.py  utils.py
echoflow/aspects/: echoflow_aspect.py  singleton_echoflow.py
echoflow/config/: datastore.yaml  echoflow_config.py  logging_config.yaml  pipeline.yaml
echoflow/convert/: flows.py  tasks.py  utils.py
echoflow/fetch/: utils.py
echoflow/models/: datastore.py  db_log_model.py  echoflow_config.py  output_model.py  pipeline.py
echoflow/rule_engine/: dependency_engine.py  echoflow_rules.txt
echoflow/stages/: __init__.py  docker_trigger.py  echoflow.py  echoflow_trigger.py  level0.py  level1.py  pipeline_trigger.py  utils.py
echoflow/subflows/: utils.py
echoflow/tests/: test_hello.py
echoflow/utils/: config_utils.py  databse_utils.py  file_utils.py  function_utils.py  log_util.py
jupyterbook/: _config.yml  _toc.yml  intro.md
jupyterbook/aws/: datastore.yaml  datastoreconfiguration.md  intro.md  pipelineconfiguration.md
jupyterbook/configuration/: blocks.md  datastore.md  pipeline.md
jupyterbook/local/: EK60_SH1707_Shimada.txt  datastore.yaml  datastoreconfiguration.md  notebook.ipynb  pipeline.yaml  pipelineconfiguration.md
notebooks/: ConfigurationDemo.ipynb  FlowDemo.ipynb  HakeFlowDemo.ipynb  aop_test.ipynb  dask_issue.py  database_test copy.ipynb  echoflow.ipynb  hake.yaml  logging_demo.ipynb  s3_demo.ipynb  x0007_fileset.txt
notebooks/hake_transects_2017_original/: x0007_fileset.txt  x0010_fileset.txt
prototype/: upload_exclude_folders.txt
prototype/notebooks/: 20250614_check_MVBS.ipynb  20250905_ingest_NASC.ipynb  echopop_survey_griddifier_notebook.ipynb  prototype2.ipynb  prototype3.ipynb  prototype4_plot_grid.ipynb  prototype6.ipynb  prototype7_echoshader.ipynb  prototype7_echoshader_refactor.ipynb  prototype8_echogram_serve.ipynb  prototype_echogram_viz.ipynb  prototype_ship_test.ipynb  prototyping.ipynb  test_Sv_info.csv
recipe/deploy/: deploy_cloud.yaml  deploy_ship.yaml  deploy_ship_2025.yaml
recipe/params/: config_ship.yaml
src/echodataflow/: __init__.py
tests/: README.md
tests/deployment/: test_deploy_cli.py  test_deploy_engine.py  test_deploy_ship_cloud.py
tests/rewrite/: conftest.py  test_deploy_characterization.py  test_deploy_cli.py  test_deploy_engine.py  test_deploy_ship_cloud.py
(+224 files in other folders)
