[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
fallback_version = "unknown"
local_scheme = "no-local-version"
write_to = "echodataflow/version.py"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["echodataflow/tests/flow_tests", "echodataflow/tests/unit"]
addopts = "--cov=./ --cov-report=term --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.report]
include_namespace_packages = true

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/docs/*",
    "*/deployment/*",
    "*/setup.py",
]