[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm[toml] >= 6",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
fallback_version = "unknown"
local_scheme = "no-local-version"
version_file = "echodataflow/version.py"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=./ --cov-report=term --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.report]
include_namespace_packages = true

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/docs/*"
]