[metadata]
name = echoflow
maintainer = Landung Setiawan
maintainer_email = landungs@uw.edu
description = Sonar conversion pipeline tool with echopype
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lsetiawan/echoflow
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = Landung Setiawan
author_email = landungs@uw.edu
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    requests
    prefect>=2
    echopype>=0.6.3
    jinja2
    prefect-dask
    pydantic
python_requires = >=3.8,<3.11
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
docs =
    sphinx
    sphinx-automodapi
all =
    %(test)s
    %(lint)s
    %(docs)s
